syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// PriestTalents message.
message PriestTalents {
}

// END GENERATED

message PriestOptions {
	enum Armor {
		NoArmor = 0;
		InnerFire = 1;
	}
	Armor armor = 1;
	bool use_shadowfiend = 2;
}

message DisciplinePriest {
	message Rotation {}

	message Options {
		PriestOptions class_options = 1;
		UnitReference power_infusion_target = 2;
	}
	Options options = 3;
}

message HolyPriest {
	message Rotation {}

	message Options {
		PriestOptions class_options = 1;
	}
	Options options = 3;
}

message ShadowPriest {
	message Rotation {}

	message Options {
		PriestOptions class_options = 1;
		UnitReference power_infusion_target = 2;
	}
	Options options = 3;
}
